Add internal or external mode

--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -18,6 +18,15 @@ on:
           - eu-west-3
         required: true
 
+      deployMode:
+        type: choice
+        description: Deploy mode (internal, external)
+        default: internal
+        options:
+          - internal
+          - external
+        required: true
+
 env:
   KUBERNETES_VERSION: v1.23.6
 
@@ -231,31 +240,76 @@ jobs:
           chmod 700 get_helm.sh
           ./get_helm.sh
 
-
+      # Recuperer stationback - TargetGroupBinding
       - name: Retrieve back ingress
         id: stationback-targetgroupbinding
         run: |
           echo "::set-output name=targetGroupBinding::$( aws elbv2 describe-target-groups --name station-back-target-group  --query 'TargetGroups[0].TargetGroupArn' --output text)"
 
+      # Recuperer stationback - ALB list
+      - name: Retrieve back albiplist temp
+        id: stationback-albiplisttemp
+        run: |
+          echo "::set-output name=albiplist::$( aws ec2 describe-network-interfaces --filters "Name=description,Values=ELB app/station-back-alb/$(aws elbv2 describe-load-balancers --names station-back-alb | grep -wE 'LoadBalancerArn' | xargs | cut -d / -f 4 | cut -d , -f 1)" --query 'NetworkInterfaces[*].PrivateIpAddresses[*].PrivateIpAddress' --output text )"
+
       - name: Retrieve back albiplist
         id: stationback-albiplist
         run: |
-          echo "::set-output name=albiplist::$( aws ec2 describe-network-interfaces --filters "Name=description,Values=ELB app/$ALB_NAME_BACK/$(aws elbv2 describe-load-balancers --names $ALB_NAME_BACK | grep -wE 'LoadBalancerArn' | xargs | cut -d / -f 4 | cut -d , -f 1)" --query 'NetworkInterfaces[*].PrivateIpAddresses[*].PrivateIpAddress' --output text )"
-
-
-      - name: Retrieve front ingress
+          echo "::set-output name=albiplist::$( echo ${{ steps.stationback-albiplisttemp.outputs.albiplist }} | xargs )"
+    
+      # Recuperer stationfront - TargetGroupBinding
+      - name: Retrieve front ingress 
         id: stationfront-targetgroupbinding
         run: |
           echo "::set-output name=targetGroupBinding::$( aws elbv2 describe-target-groups --name station-front-target-group  --query 'TargetGroups[0].TargetGroupArn' --output text)"
 
-      
+      # Recuperer stationfront - ALB list
+      - name: Retrieve front albiplist temp
+        id: stationfront-albiplisttemp
+        run: |
+          echo "::set-output name=albiplist::$(  aws ec2 describe-network-interfaces --filters "Name=description,Values=ELB app/station-front-alb/$(aws elbv2 describe-load-balancers --names station-front-alb | grep -wE 'LoadBalancerArn' | xargs | cut -d / -f 4 | cut -d , -f 1)" --query 'NetworkInterfaces[*].PrivateIpAddresses[*].PrivateIpAddress' --output text )"
+
+      - name: Retrieve front albiplist
+        id: stationfront-albiplist
+        run: |
+          echo "::set-output name=albiplist::$( echo  ${{ steps.stationfront-albiplisttemp.outputs.albiplist }} | xargs )"
+
+      # Recuperer redis mode
+      - name: Retrieve redis mode
+        id: stationredis-mode
+        run: |
+          if [[ "${{ github.event.inputs.deployMode }}" == "internal" ]]; then
+                echo "::set-output name=mode::internalredis"
+                echo "::set-output name=usessl::false"
+          fi
+          if [[ "${{ github.event.inputs.deployMode }}" == "external" ]]; then
+              echo "::set-output name=mode::externalredis"
+              echo "::set-output name=usessl::true"
+          fi
+
+      # Recuperer db - mode
+      - name: Retrieve db mode
+        id: stationdb-mode
+        run: |
+          if [[ "${{ github.event.inputs.deployMode }}" == "internal" ]]; then
+                echo "::set-output name=mode::internaldb"
+          fi
+          if [[ "${{ github.event.inputs.deployMode }}" == "external" ]]; then
+              echo "::set-output name=mode::externaldb"
+          fi
+  
+     
 
       - name: Installation application on argocd
         id:  argocd-installationappli
         run: |
           helm upgrade -i applications ./applications \
-          --set station.back.ingressarn=${{ steps.stationback-targetgroupbinding.outputs.targetGroupBinding }} \
-          --set station.back.albiplist=${{ steps.stationback-albiplist.outputs.albiplist }} \
-          --set station.front.ingressarn=${{ steps.stationfront-targetgroupbinding.outputs.targetGroupBinding }}
+          --set station.back.ingressarn="${{ steps.stationback-targetgroupbinding.outputs.targetGroupBinding }}" \
+          --set station.back.albiplist="${{ steps.stationback-albiplist.outputs.albiplist }}" \
+          --set station.front.ingressarn="${{ steps.stationfront-targetgroupbinding.outputs.targetGroupBinding }}" \
+          --set station.front.albiplist="${{ steps.stationfront-albiplist.outputs.albiplist }}" \
+          --set station.redis.mode="${{ steps.stationredis-mode.outputs.mode }}" \
+          --set station.redis.usessl=${{ steps.stationredis-mode.outputs.usessl }} \
+          --set station.db.mode="${{ steps.stationdb-mode.outputs.mode }}" \
         working-directory: kubernetes/argocd
   
