--- a/kubernetes/argocd/shared/templates/transverse.yaml
+++ b/kubernetes/argocd/shared/templates/transverse.yaml
@@ -5,36 +5,22 @@ metadata:
   namespace: transverse
   finalizers:
   - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: transverse
   project: default
   source:
     chart: transverse
     helm:
       releaseName: transverse
       parameters: 
-        - name: stationback.ingress.targetGroupARN
-          value: {{ .Values.station.back.ingressarn | quote }}
-        - name: stationback.albiplist
-          value: {{ .Values.station.back.albiplist | quote }}
-        - name: stationfront.ingress.targetGroupARN
-          value: {{ .Values.station.front.ingressarn | quote }}
-        - name: stationfront.albiplist
-          value: {{ .Values.station.front.albiplist | quote }}
-        - name: stationredis.mode
-          value: {{ .Values.station.redis.mode | quote }}
-        - name: stationredis.usessl
-          value: {{ .Values.station.redis.usessl  }}
-        - name: stationdb.mode
-          value: {{ .Values.station.db.mode | quote }}
-        - name: stationdb.storage.storageClass
-          value: "none"
-        - name: stationdb.storage.efsid
-          value: ""
-        - name: stationdb.storage.efsaccesspointid
-          value: ""
+        - name: app.accountidentifier
+          value: {{ .Values.app.accountidentifier | quote }}
+        - name: app.region
+          value: {{ .Values.app.region | quote }}
 
     repoURL: {{ .Values.helm.repository | quote }} 
     targetRevision: 1.0.0
