--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -73,7 +73,7 @@ jobs:
   # Installation ArgoCD
   install_argocd:
     runs-on: ubuntu-latest
-    needs: deploy_station
+    needs: eks
     steps:
       
       - name: Checkout
