--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -131,64 +131,10 @@ jobs:
         working-directory: kubernetes/argocd
       
 
-      - name: Open UI Argocd
-        id: argocd-openui
-        run: helm upgrade -i argocdinstall ./argocd --set argocd.ingress.targetGroupARN="${{ steps.argocd-targetgroupbinding.outputs.targetGroupBinding }}" --set argocd.network.vpc_cidr="${{ steps.argocd-vpc.outputs.cidr }}"
-        working-directory: kubernetes/helm
-
-
   # Configuration ArgoCD
-  configuration_argocd:
-    runs-on: ubuntu-latest
-    needs: install_argocd
-    steps:
-      
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.event.inputs.region}}
-          role-duration-seconds: 3600
-          mask-aws-account-id: false
-      
-      - name: Connect EKS cluster
-        id: connect_eks_cluster
-        run: aws eks --region ${{ github.event.inputs.region}} update-kubeconfig --name station-eks-cluster
-
-
-      - name: Installation Kubernetes
-        id: kubernetes_installation
-        run: curl -LO https://storage.googleapis.com/kubernetes-release/release/${{ env.KUBERNETES_VERSION }}/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl
-
-
-
-      - name: Installation argocdcli
-        id:  argocd-installation
-        run: sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 && sudo chmod +x /usr/local/bin/argocd
-
-      - name: Retrieve argocdpass
-        id: argocd-pass
-        run: |
-          echo "::set-output name=password::$( aws secretsmanager get-secret-value --secret-id stationsec-secretmanager --query SecretString --output text |jq -r .argocdpassword |base64)"
-
-      # Not working
-      #- name: Change argocd password argocd-initsecret
-      #  id: argocd-change-initpassword
-      #  run: |
-      #    kubectl -n argocd patch secret argocd-initial-admin-secret \
-      #    -p '{"stringData": {
-      #    "password": "${{ steps.argocd-pass.outputs.password }}"
-      #    }}'
-
-    # Configuration ArgoCD
   install_shared_argocd:
     runs-on: ubuntu-latest
-    needs: configuration_argocd
+    needs: install_argocd
     steps:
       
       - name: Checkout
@@ -236,10 +182,75 @@ jobs:
           --set app.region="${{ github.event.inputs.region}}" 
           --set app.vpcId="${{ steps.argocd-vpc.outputs.id }}" 
         working-directory: kubernetes/argocd
-     
+   
 
 
   # Configuration ArgoCD
+  configuration_argocd:
+    runs-on: ubuntu-latest
+    needs: install_shared_argocd
+    steps:
+      
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+          mask-aws-account-id: false
+      
+      - name: Connect EKS cluster
+        id: connect_eks_cluster
+        run: aws eks --region ${{ github.event.inputs.region}} update-kubeconfig --name station-eks-cluster
+
+
+      - name: Installation Kubernetes
+        id: kubernetes_installation
+        run: curl -LO https://storage.googleapis.com/kubernetes-release/release/${{ env.KUBERNETES_VERSION }}/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl
+
+
+
+      - name: Installation argocdcli
+        id:  argocd-installation
+        run: sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 && sudo chmod +x /usr/local/bin/argocd
+
+
+      - name: Install Helm
+        run: |
+          curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
+
+
+     - name: Open UI Argocd
+        id: argocd-openui
+        run: helm upgrade -i argocdinstall ./argocd --set argocd.ingress.targetGroupARN="${{ steps.argocd-targetgroupbinding.outputs.targetGroupBinding }}" --set argocd.network.vpc_cidr="${{ steps.argocd-vpc.outputs.cidr }}"
+        working-directory: kubernetes/helm
+
+
+      - name: Retrieve argocdpass
+        id: argocd-pass
+        run: |
+          echo "::set-output name=password::$( aws secretsmanager get-secret-value --secret-id stationsec-secretmanager --query SecretString --output text |jq -r .argocdpassword |base64)"
+
+      # Not working
+      #- name: Change argocd password argocd-initsecret
+      #  id: argocd-change-initpassword
+      #  run: |
+      #    kubectl -n argocd patch secret argocd-initial-admin-secret \
+      #    -p '{"stringData": {
+      #    "password": "${{ steps.argocd-pass.outputs.password }}"
+      #    }}'
+
+     
+
+
+  # Installation application ArgoCD
   install_application_argocd:
     runs-on: ubuntu-latest
     needs: install_shared_argocd
