--- a/kubernetes/argocd/shared/templates/application-loadbalancer.yaml
+++ b/kubernetes/argocd/shared/templates/application-loadbalancer.yaml
@@ -20,7 +20,7 @@ spec:
         - name: clusterName
           value: station-eks-cluster
         - name: serviceAccount.create
-          value: false 
+          value: "false" 
         - name: region
           value: {{ .Values.app.region | quote }}
         - name: vpcId
