--- a/kubernetes/argocd/shared/templates/external-secrets.yaml
+++ b/kubernetes/argocd/shared/templates/external-secrets.yaml
@@ -18,7 +18,7 @@ spec:
       releaseName: kubernetes-external-secrets
       parameters: 
         - name: serviceAccount.create
-          value: false
+          value: "false"
         - name: env.AWS_REGION
           value: {{ .Values.app.region | quote }}
         - name: serviceAccount.name
