--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -179,7 +179,7 @@ jobs:
         run: |
           helm upgrade -i shared ./shared \
           --set app.accountidentifier="${{ steps.retrieve-account.outputs.identifier }}" \
-          --set app.region="${{ github.event.inputs.region}}" 
+          --set app.region="${{ github.event.inputs.region}}" \
           --set app.vpcId="${{ steps.argocd-vpc.outputs.id }}" 
         working-directory: kubernetes/argocd
    
@@ -253,7 +253,7 @@ jobs:
   # Installation application ArgoCD
   install_application_argocd:
     runs-on: ubuntu-latest
-    needs: install_shared_argocd
+    needs: configuration_argocd
     steps:
       
       - name: Checkout
