--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -108,10 +108,6 @@ jobs:
         id: argocd-createnamespace
         run: kubectl get namespace | grep -q "^argocd" || kubectl create namespace argocd
 
-      - name: Retrieve targetGroupBinding
-        id: argocd-targetgroupbinding
-        run: |
-          echo "::set-output name=targetGroupBinding::$( aws elbv2 describe-target-groups --name argocd-target-group  --query 'TargetGroups[0].TargetGroupArn' --output text)"
 
       - name: Retrieve VPC CIDR
         id: argocd-vpc
@@ -225,6 +221,17 @@ jobs:
           curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
+
+      - name: Retrieve targetGroupBinding
+        id: argocd-targetgroupbinding
+        run: |
+          echo "::set-output name=targetGroupBinding::$( aws elbv2 describe-target-groups --name argocd-target-group  --query 'TargetGroups[0].TargetGroupArn' --output text)"
+
+
+      - name: Retrieve VPC CIDR
+        id: argocd-vpc
+        run: |
+          echo "::set-output name=cidr::$( aws ec2 describe-vpcs --filter Name=tag:Name,Values=station_vpc --query 'Vpcs[].CidrBlock' --output text )"
 
 
       - name: Open UI Argocd
