Correction mauvais namespace

--- a/kubernetes/argocd/shared/templates/application-loadbalancer.yaml
+++ b/kubernetes/argocd/shared/templates/application-loadbalancer.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: station-aws-load-balancer-controller
-  namespace: transverse
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   annotations:
