--- a/kubernetes/argocd/shared/templates/calico.yaml
+++ b/kubernetes/argocd/shared/templates/calico.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: calico
-  namespace: transverse
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   annotations:
