--- a/kubernetes/argocd/shared/templates/efs-csi-driver.yaml
+++ b/kubernetes/argocd/shared/templates/efs-csi-driver.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: station-aws-efs-csi-driver
-  namespace: transverse
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   annotations:
