Correction boolean en erreur

--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -358,7 +358,7 @@ jobs:
           --set station.front.ingressarn="${{ steps.stationfront-targetgroupbinding.outputs.targetGroupBinding }}" \
           --set station.front.albiplist="${{ steps.stationfront-albiplist.outputs.albiplist }}" \
           --set station.redis.mode="${{ steps.stationredis-mode.outputs.mode }}" \
-          --set station.redis.usessl=${{ steps.stationredis-mode.outputs.usessl }} \
+          --set station.redis.usessl="${{ steps.stationredis-mode.outputs.usessl }}" \
           --set station.db.mode="${{ steps.stationdb-mode.outputs.mode }}" 
         working-directory: kubernetes/argocd
   
