--- a/kubernetes/argocd/applications/values.yaml
+++ b/kubernetes/argocd/applications/values.yaml
@@ -16,9 +16,9 @@ station:
   back:
     ingressarn: ""
 
-    albiplist: ""
+    albiplist: []
 
   front:
     ingressarn: ""
 
-    albiplist: ""
+    albiplist: []
