--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -1,4 +1,4 @@
-name: Delete all eks ArgoCD
+name: [AWS] Delete all eks ArgoCD
 
 on: 
   workflow_dispatch:
@@ -50,7 +50,15 @@ jobs:
 
       - name: delete helm station
         id: delete-station
-        run: bash deleteAwsStationChart.sh
+        run: |
+          aws eks --region "eu-west-3" update-kubeconfig --name station-eks-cluster
+
+          echo "Suppression du chart applications"
+          helm delete applications
+
+          echo "Delete transverse namespace and chart helm"
+          helm delete shared
+
         working-directory: kubernetes/argocd
 
   delete_eks:
