Tentative mauvaise image

--- a/.github/workflows/build-helm-repo.yaml
+++ b/.github/workflows/build-helm-repo.yaml
@@ -64,8 +64,8 @@ jobs:
         working-directory: current/kubernetes/helm
 
       # Display value
-      - name: Copy value station
-        id: copy-value-station
+      - name: Debug value
+        id: debug-value
         run: |
           ls 
           cat values.yaml
