--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -17,6 +17,15 @@ on:
           - eu-west-3
         required: true
 
+      supervision:
+        type: choice
+        description: Supervision (Oui/Non)
+        default: non
+        options:
+          - non
+          - oui
+        required: true
+
 env:
   TERRAFORM_VERSION: 0.15.5
 
@@ -60,6 +69,41 @@ jobs:
           helm delete shared
 
         working-directory: kubernetes/argocd
+
+  delete_cloudwatchalarm:
+    runs-on: ubuntu-latest
+    needs: destroy_station
+    if: ${{ github.event.inputs.supervision == 'oui' }}
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        id: setup_terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION}} 
+          terraform_wrapper: false
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+
+
+      - name: cloudwatchalarm init
+        id: init-cloudwatchalarm
+        run: terraform init -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
+        working-directory: terraformaws/cloudwatchalarm
+
+      - name: cloudwatchalarm destroy
+        id: destroy-cloudwatchalarm
+        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
+        working-directory: terraformaws/cloudwatchalarm
 
   delete_eks:
     runs-on: ubuntu-latest
