--- a/.github/workflows/build-helm-repo.yaml
+++ b/.github/workflows/build-helm-repo.yaml
@@ -7,8 +7,8 @@ on:
 
       helm_project_version:
         type: string
-        default: 1.0.0
-        description: Helm project version
+        default: 1.0.1
+        description: station  project version
         required: true
 
 env:
