--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -38,9 +38,8 @@ on:
 
 env:
   KUBERNETES_VERSION: v1.23.6
+  ARGOCD_SERVER: "argocd.exakaconsulting.org:443"
 
-#env:
-#  ENVIRONMENT_NAME: dev
 
 jobs:
   # Deploy networks
@@ -397,3 +396,47 @@ jobs:
           --set station.db.mode="${{ steps.stationdb-mode.outputs.mode }}" 
         working-directory: kubernetes/argocd
   
+
+  # Synchronize application
+  synchronize_application_argocd:
+    runs-on: ubuntu-latest
+    needs: install_application_argocd
+    steps:
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+          mask-aws-account-id: false
+      
+      # Connect EKS cluster
+      - name: Connect EKS cluster
+        id: connect_eks_cluster
+        run: aws eks --region ${{ github.event.inputs.region}} update-kubeconfig --name station-eks-cluster
+
+      # Install cli
+      - name: Install argocdcli
+        id: install-argocdcli
+        run: sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 && sudo chmod +x /usr/local/bin/argocd
+
+      # Get password
+      - name: Retrieve ArgoCD password
+        id: retrieve-password-argocd
+        run: |
+          echo "::set-output name=value::$( kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)"
+
+      # Login ArgoCD
+      - name: login ArgoCD
+        id: login-argocd
+        run: argocd login ${{ env.ARGOCD_SERVER }}  --username admin --password ${{ steps.retrieve-password-argocd.outputs.value }} --insecure
+
+      # Synchronize applications
+     # - name: Synchronize Applications
+     #   id: synchronize-applications
+     #   run: argocd app sync --prune --retry-limit 2 -l exakaconsulting/strategy=refresh
+
+
+
