--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -26,6 +26,16 @@ on:
           - oui
         required: true
 
+      deployMode:
+        type: choice
+        description: Deploy mode (internal, external)
+        default: internal
+        options:
+          - internal
+          - external
+        required: true
+
+
 env:
   TERRAFORM_VERSION: 0.15.5
 
@@ -105,9 +115,86 @@ jobs:
         run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
         working-directory: terraformaws/cloudwatchalarm
 
+  # Delete RDS
+  delete_rds:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.deployMode == 'externe' }}
+    needs: destroy_station
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        id: setup_terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION}} 
+          terraform_wrapper: false
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+
+
+      - name: rds init
+        id: init-rds
+        run: terraform init -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
+        working-directory: terraformaws/stationdb_rds
+
+      - name: rds destroy
+        id: destroy-rds
+        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
+        working-directory: terraformaws/stationdb_rds
+
+  # Delete Redis
+  delete_redis:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.deployMode == 'externe' }}
+    needs: destroy_station
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        id: setup_terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION}} 
+          terraform_wrapper: false
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+
+
+      - name: redis init
+        id: init-redis
+        run: terraform init -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
+        working-directory: terraformaws/stationredis
+
+      - name: redis destroy
+        id: destroy-redis
+        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
+        working-directory: terraformaws/stationredis
+
+
+
+
+
+
   delete_eks:
     runs-on: ubuntu-latest
-    needs: destroy_station
+    needs: [destroy_station , delete_rds]
     steps:
       - name: Checkout
         id: checkout
@@ -139,6 +226,7 @@ jobs:
         run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
         working-directory: terraformaws/eks
 
+ 
   delete_secrets:
     runs-on: ubuntu-latest
     needs: delete_eks
