--- a/application/spring-java/StationDemoService/pom.xml
+++ b/application/spring-java/StationDemoService/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>com.exakaconsulting.poc</groupId>
 		<artifactId>StationDemoProject</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<properties>
