--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -18,11 +18,27 @@ env:
   NODEJS_VERSION: 14
 
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      
+      # Retrieve a token for pull
+      - name: Get Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v1
+        with:
+          application_id: ${{ secrets.APPLICATION_ID }}
+          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+
+
+      # Retrieve current source
+      - name: Checkout current 
+        id: checkout-current
+        uses: actions/checkout@v3
+        with:
+          path: current
+          token: ${{ steps.get_workflow_token.outputs.token }}
 
       - name: Set up Java 8
         uses: actions/setup-java@v3
@@ -30,14 +46,55 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
 
+      - name: Build Backend
+        id: build_backend
+        run: mvn --batch-mode --update-snapshots package
+        working-directory: current/application
+
+  login_dockerhub:
+    runs-on: ubuntu-latest
+    steps:
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+
+  build_front:
+
+        # Retrieve a token for pull
+      - name: Get Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v1
+        with:
+          application_id: ${{ secrets.APPLICATION_ID }}
+          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+
+
+      # Retrieve current source
+      - name: Checkout current 
+        id: checkout-current
+        uses: actions/checkout@v3
+        with:
+          path: current
+          token: ${{ steps.get_workflow_token.outputs.token }}
+
+      # Install nodejs
       - name: Set up NodeJS ${{ env.NODEJS_VERSION}} 
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODEJS_VERSION}}
       - run: node --version
-
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
-        working-directory: application
-
       
+      # Build front
+      - name: Build front
+        id: build-front
+        run: |
+            # Init
+            npm install
+
+            # Launch Execution
+            npm run-script prod-zip
+        
+   
