--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -27,7 +27,6 @@ env:
 jobs:
   build_backend:
     runs-on: ubuntu-latest
-
     steps:
       
       # Retrieve a token for pull
@@ -68,6 +67,7 @@ jobs:
 
   push_back_dockerhub:
     runs-on: ubuntu-latest
+    needs: build_backend
     steps:
 
      # Retrieve a token for pull
