--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -62,8 +62,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: backendwar
-          path: path/to/artifact/world.txt
-          working-directory: current/application/spring-java/StationDemoWeb/target/StationDemoSecureWeb.war
+          path: current/application/spring-java/StationDemoWeb/target/StationDemoSecureWeb.war
 
   push_back_dockerhub:
     runs-on: ubuntu-latest
@@ -93,8 +92,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: backendwar
-          path: StationDemoSecureWeb.war
-          working-directory: current/application/spring-java/StationDemoWeb/docker
+          path: current/application/spring-java/StationDemoWeb/docker/StationDemoSecureWeb.war
  
       - name: debug
         id: debug
